2013-03-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot: Small Spad syntax change.

2013-03-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/eigen.spad.pamphlet: Delete useless code.

2013-02-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/indexedp.spad.pamphlet.
	src/algebra/poly.spad.pamphlet: Only request Comparable
	from the second argument to FreeModule.

2013-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot, src/interp/macros.lisp,
	src/interp/property.lisp, src/interp/postpar.boot:
	Minor cleanups.

2012-12-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* *: More renames of 'Axiom' to 'FriCAS'.

2012-12-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/scripts/norm-out:  Clean up.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/trace.boot:  Fix untrace.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot, src/interp/parsing.lisp,
	src/interp/scwrap2.boot:  Better error messages
	from Spad parser.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot:  Simplify parser.
	src/interp/bootlex.lisp:  Remove.
	src/interp/Makefile.in:  Adjust.

2012-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matrix.spad.pamphlet,
	src/algebra/matfuns.spad.pamphlet: Speed up matrix
	operations.

2012-11-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/primitives.lisp, src/interp/i-coerce.boot,
	src/interp/i-coerfn.boot,
	src/algebra/array2.spad.pamphlet,
	src/algebra/matrix.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet: Use true 2-dimensional
	arrays.

2012-11-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/amodgcd.spad.pamphlet:  Fix wrong comparison
	of degrees.

2012-11-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/interp/scan.boot,
	src/interp/bootlex.lisp, src/interp/parsing.lisp,